Atualiza CsvReader